# ezpunishments2-api

./: .flake8  Makefile  README.md  manage.py  pyproject.toml
ezpunishments/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
ezpunishments/core/: admin.py  models.py
ezpunishments/core/management/commands/: wait_for_db.py
ezpunishments/core/migrations/: 0001_initial.py  0002_punishment.py  0003_auto_20200924_0030.py
ezpunishments/core/tests/: test_admin.py  test_models.py
ezpunishments/punishment/: apps.py  serializers.py  urls.py  views.py
ezpunishments/punishment/tests/: test_punishment_api.py
ezpunishments/user/: serializers.py  urls.py  views.py
ezpunishments/user/tests/: test_user_api.py
ezpunishments2/: manage.py
ezpunishments2/ezpunishments2/: asgi.py  settings.py  urls.py  wsgi.py
