[tool.poetry]
name = "ezpunishments2"
version = "0.1.0"
description = "A clone of eZPunishments-server made in Python using Django Rest Framework"
authors = ["Matt Wagaman <matthew.wagaman@wpromote.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.1"
djangorestframework = "^3.11.1"
psycopg2 = "^2.8.6"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
honcho = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
